--- a/amplify.yml
+++ b/amplify.yml
@@ -16,7 +16,7 @@ frontend:
       commands:
         - yarn export
   artifacts:
-    baseDirectory: .next
+    baseDirectory: out
     files:
       - '**/*'
   cache:
