Amplify上で構築失敗するため、erxportをコメントアウトしてみる。

--- a/amplify.yml
+++ b/amplify.yml
@@ -12,11 +12,11 @@ frontend:
     build:
       commands:
         - yarn build
-    export:
-      commands:
-        - yarn export
+    # export:
+    #   commands:
+    #     - yarn export
   artifacts:
-    baseDirectory: out
+    baseDirectory: .next
     files:
       - '**/*'
   cache:
