Amplifyの構築失敗はBranch作成が原因らしい。再度Build方式をStandaloneに戻す。下記に従い、aws cliの設定を変更。https://zenn.dev/daumkuchen/articles/492dceea64eaff

--- a/amplify.yml
+++ b/amplify.yml
@@ -12,11 +12,10 @@ frontend:
     build:
       commands:
         - yarn build
-    # export:
-    #   commands:
-    #     - yarn export
+        - NEXT_PRIVATE_STANDALONE=true npx next export -o standalone
+
   artifacts:
-    baseDirectory: .next
+    baseDirectory: standalone
     files:
       - '**/*'
   cache:
