next export は使えないらしい。next.config.jsでStandaloneでBuildすることを指定しているため、exportの記述を削除する。

--- a/amplify.yml
+++ b/amplify.yml
@@ -11,8 +11,8 @@ frontend:
         - yarn install
     build:
       commands:
+        - NEXT_PRIVATE_STANDALONE=true
         - yarn build
-        - NEXT_PRIVATE_STANDALONE=true npx next export -o standalone
 
   artifacts:
     baseDirectory: standalone
