Standalone Directoryが見つからないとのことで、修正する。

--- a/amplify.yml
+++ b/amplify.yml
@@ -11,11 +11,12 @@ frontend:
         - yarn install
     build:
       commands:
-        - NEXT_PRIVATE_STANDALONE=true
         - yarn build
-
+    export:
+      commands:
+        - yarn export
   artifacts:
-    baseDirectory: standalone
+    baseDirectory: .next
     files:
       - '**/*'
   cache:
